<resources>
    <string name="invalid_context">Invalid list name</string>
    <string name="invalid_project">Invalid tag name</string>
    <string name="added_task">Added task</string>
    <string name="add_task_failed">Could not add task</string>
    <string name="save_task">Save task</string>
    <string name="update_task_failed">Could not update task</string>
    <string name="sort">Sort</string>
    <string name="script">Script</string>
    <string name="filter">Filter</string>
    <string name="main_no_items">No tasks to display.</string>
    <string name="set_preferences">Settings</string>
    <string name="preferences">Settings</string>
    <string name="archive">Archive</string>
    <string name="help">Help</string>
    <string name="show_filter_drawer">Saved filters</string>
    <string name="history">History</string>
    <string name="debug_info">Debugging info</string>
    <string name="log">Log</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="open_file">Open task list file</string>
    <string name="sync">Sync</string>
    <string name="changelist">Select list</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="task">Task</string>
    <string name="addtask">Add Task</string>
    <string name="updatetask">Update</string>
    <string name="viewtask">View Task</string>
    <string name="cleartask">Clear Task</string>
    <string name="clear_database">Empty database</string>
    <string name="done">Complete</string>
    <string name="priority">Prioritize</string>
    <string name="select_priority">Select priority</string>
    <string name="select_all">Select all</string>
    <string name="add_list_or_tag">Add lists and tags</string>
    <string name="update_lists">Update lists</string>
    <string name="update_tags">Update tags</string>
    <string name="remove_list_or_tag">Remove lists and tags</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="defer_due">Set due date</string>
    <string name="defer_threshold">Set threshold date</string>
    <string name="insert_due">Insert due date</string>
    <string name="insert_threshold">Insert threshold date</string>
    <string name="share">Share</string>
    <string name="share_database">Share database</string>
    <string name="unComplete">Undo complete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_changes">Changes will be lost.</string>
    <string name="clear_filter">Clear filter</string>
    <string name="write_failed">Failed writing the file. Your changes were NOT saved.</string>
    <string name="tasktexthint">\@Discuss +Paris issue with +Hector @Troy
\nTell +Hector not to be such a drag @Troy
\nRemove this text from the menu @Phone</string>
    <string name="filter_name_empty">No name specified, not adding filter</string>
    <string name="widget_name_empty">No widget name specified, not adding widget</string>
    <string name="add_task_help">Update or make additions to the task list. One task per line.

 <b>Priority</b>

 Start the line with (.), like (A)

 <b>Tags</b>
 Start with a + sign, like +Kitchen

 <b>Lists</b>
 Start with an @ sign, like @home

 A task can include any number of tags or be on multiple lists.
 </string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_interface">Interface</string>
    <string name="preference_widget">Widget</string>
    <string name="preference_other">Other</string>
    <string name="ARCHIVE_settings_header">Archive</string>
    <string name="ARCHIVE_settings_summary">Settings for archiving completed tasks in done.txt</string>
    <string name="auto_archive_pref_title">Auto archive</string>
    <string name="auto_archive_pref_summary">Archive tasks immediately on completion.</string>
    <string name="archive_now_pref_title">Archive now</string>
    <string name="archive_now_pref_summary">Move completed tasks from todo.txt to done.txt.</string>
    <string name="dropbox_logout_pref_title">Log out</string>
    <string name="dropbox_logout_pref_summary">Log out of Dropbox.</string>
    <string name="TODOTXTPATH_title">File location</string>
    <string name="TODOTXTPATH_summary">The Dropbox folder where todo.txt is stored.</string>
    <string name="TODOTXTPATH_defaultPath">/todo</string>
    <string name="DROPBOX_settings_header">Dropbox</string>
    <string name="DROPBOX_settings_summary">Settings for Dropbox synchronisation</string>
    <string name="todotxt_features_settings_header">Features</string>
    <string name="todotxt_features_settings_summary">Enable or disable features</string>
    <string name="todotxt_configuration_settings_header">Configuration</string>
    <string name="todotxt_configuration_settings_summary">Configure app behavior</string>
    <string name="todotxt_creation_settings_header">Task Creation</string>
    <string name="todotxt_ui_settings_header">Features</string>
    <string name="todotxt_ui_settings_summary">Control what is being displayed</string>
    <string name="todotxt_behavior_settings_header">Behavior</string>
    <string name="todotxt_settings_summary">Settings for the whole app</string>
    <string name="sort_complete_last_pref_title">Show completed last</string>
    <string name="sort_complete_last_pref_summary">Always display the completed tasks at the bottom of the list</string>
    <string name="keep_prio_header">Keep priority in completed tasks</string>
    <string name="keep_prio_summary">Simpletask keeps priority on completion</string>
    <string name="prepend_date_pref_title">Datestamp new tasks</string>
    <string name="prepend_date_pref_summary">Automatically add creation date</string>
    <string name="line_breaks_pref_title">Windows-friendly line breaks</string>
    <string name="line_breaks_pref_summary">Use Windows-friendly line breaks</string>
    <string name="recur_from_original_date_pref_title">Recur task using original dates</string>
    <string name="recur_from_original_date_pref_summary">Increase the original dates in the task when creating the recurring task.
        Un-check this to set the new dates relative to today.</string>
    <string name="swipe_complete_pref_title">Swipe to complete</string>
    <string name="swipe_complete_pref_summary">Swipe over a task to complete it.</string>
    <string name="manual_sync_pref_title">Manual sync</string>
    <string name="manual_sync_pref_summary">Don\'t automatically upload every change to Dropbox.</string>
    <string name="resume_sync_pref_title">Resume sync</string>
    <string name="resume_sync_pref_summary">Sync with Dropbox when opening app.</string>
    <string name="font_size_delta_pref_title">Custom font size</string>
    <string name="datebar_relative_size_summary">Relative date line size</string>
    <string name="font_size_delta_pref_summary">Change font size.</string>
    <string name="theme_pref_title">Theme</string>
    <string name="theme_pref_summary">Change app theme.</string>
    <string name="share_task_show_edit_pref_title">Edit shared tasks</string>
    <string name="share_task_show_edit_summary">Edit Simpletasked tasks prior to saving</string>
    <string name="share_task_append_text_title">Background text</string>
    <string name="share_task_append_text_summary">Append \"%s\" to tasks added in the background.</string>
    <string name="local_file_root_title">root:// directory</string>
    <string name="local_file_root_summary">%s</string>
    <string name="menu_capitalize_tasks">Capitalize</string>
    <string name="back_saves_pref_title">Back button</string>
    <string name="back_saves_summary">Save the open task list, or apply the filter when pressing back.</string>
    <string name="show_txt_only_pref_title">Only show TXT files</string>
    <string name="show_txt_only_summary">Only show .txt files in the file selection dialog.</string>
    <string name="calendar_sync_screen_title">Notifications</string>
    <string name="calendar_sync_screen_summary">Calendar reminders (experimental)</string>
    <string name="calendar_sync_dues_title">Due date reminders</string>
    <string name="calendar_sync_thresholds_title">Threshold date reminders</string>
    <string name="calendar_reminder_days_title">Days in advance</string>
    <string name="calendar_reminder_days_summary">How early to set the reminder</string>
    <string name="calendar_reminder_time_title">Reminder time</string>
    <string name="calendar_reminder_time_summary">The time of day to set the reminder</string>
    <string name="drawer_fixed_landscape_title">Open landscape drawers</string>
    <string name="drawer_fixed_landscape_summary">Always open the drawers in landscape mode.</string>
    <string name="widget_theme_pref_title">Theme</string>
    <string name="widget_theme_pref_summary">Change the theme used for the widgets.</string>
    <string name="task_text_ellipsizing_pref_title">Task text ellipsizing</string>
    <string name="task_text_ellipsizing_pref_summary">Ellipsize task text in main window if it takes more than 2 lines.</string>
    <string name="task_text_ellipsizing_none">None: Very long task text</string>
    <string name="task_text_ellipsizing_start">Start: …task text</string>
    <string name="task_text_ellipsizing_middle">Middle: Very… text</string>
    <string name="task_text_ellipsizing_end">End: Very long…</string>
    <string name="task_text_ellipsizing_marquee">Marquee: Very long ta</string>
    <string name="filter_tab_header_prio">Prio</string>
    <string name="filter_tab_header_other">Other</string>
    <string name="filter_tab_header_sort">Sort</string>
    <string name="filter_tab_header_script">Script</string>
    <string name="script_tab_script_from_file">Script from file</string>
    <string name="script_tab_use_script">Use script</string>
    <string name="script_tab_test">Test</string>
    <string name="script_tab_test_task">Test task</string>
    <string name="script_tab_script">Script</string>
    <string name="script_tab_true_task_shown">Shown</string>
    <string name="script_tab_false_task_not_shown">Not shown</string>
    <string name="action_pop_up_call">Call:</string>
    <string name="action_pop_up_sms">SMS:</string>
    <string name="quick_filter_tag_header_inverted">Inverted</string>
    <string name="saved_filters_exported">Filters exported</string>
    <string name="saved_filters_imported">Filters imported</string>
    <string name="toast_lua_config_imported">Lua config imported</string>
    <string name="widget_header_transparency_title">Header transparency</string>
    <string name="widget_background_transparency_title">Background transparency</string>
    <string name="widget_extended_pref_title">Show datebar</string>
    <string name="widget_extended_pref_summary">Display dates on a separate line</string>
    <string name="taskview_extended_pref_title">Show dates on a separate line</string>
    <string name="append_tasks_at_end_title">Append to file</string>
    <string name="append_tasks_at_end_summary">Insert new tasks at the end of the file</string>
    <string name="show_edittext_hint_title">Show hints</string>
    <string name="word_wrap">Wordwrap</string>
    <string name="add_filter_shortcut">To homescreen</string>
    <string name="export_filter">Export</string>
    <string name="import_filter">Import</string>
    <string name="rename_filter">Rename</string>
    <string name="update_filter">Update</string>
    <string name="save_filter">Save current filter</string>
    <string name="filter_import_export">Import/export filters</string>
    <string name="lua_run">Run</string>
    <string name="lua_config_import_export">Import/export Lua configuration</string>
    <string name="lua_config_export">Save and export</string>
    <string name="lua_config_share">Share</string>
    <string name="lua_open_config">Lua config</string>
</resources>