<?xml version="1.0" encoding="utf-8"?>

<!--
This file is part of Todo.txt Touch, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2012 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt Touch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt Touch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt Touch.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2012 Todo.txt contributors (http://todotxt.com)
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_white_24dp"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        />
    <item
        android:id="@+id/filter"
        android:title="@string/filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="2"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/archive"
        android:title="@string/archive"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/open_file"
        android:title="@string/open_file"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/sync"
        android:title="@string/sync"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/history"
        android:title="@string/history"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/open_lua"
        android:title="@string/lua_open_config"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/preferences"
        android:title="@string/preferences"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"
        />
    <item
            android:id="@+id/show_filter_drawer"
            android:title="@string/show_filter_drawer"
            app:showAsAction="never"
    />
</menu>
