<!--suppress ALL -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/menu_save"
        android:title="@string/save_task"
        android:icon="@drawable/ic_save_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/menu_word_wrap"
        android:title="@string/word_wrap"
        android:checkable="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_capitalize_tasks"
        android:title="@string/menu_capitalize_tasks"
        android:checkable="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_show_edittext_hint"
        android:title="@string/show_edittext_hint_title"
        android:checkable="true"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_help"
        android:title="@string/help"
        app:showAsAction="never"
        />
</menu>
