<!--suppress ALL -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_next"
        android:title="@string/next"
        android:orderInCategory="100"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/menu_prev"
        android:title="@string/prev"
        android:orderInCategory="100"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/menu_share"
        android:title="@string/share"
        android:orderInCategory="100"
        app:showAsAction="always|withText"
        />
    <item
        android:id="@+id/menu_clear_database"
        android:title="@string/clear_database"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_share_database"
        android:title="@string/share_database"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
