<!--suppress ALL -->

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/menu_saved_filter_rename"
        android:title="@string/rename_filter"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_saved_filter_update"
        android:title="@string/update_filter"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_saved_filter_shortcut"
        android:title="@string/add_filter_shortcut"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/menu_saved_filter_delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
