<?xml version="1.0" encoding="utf-8"?>

<!--
This file is part of Todo.txt Touch, an Android app for managing your todo.txt file (http://todotxt.com).

Copyright (c) 2009-2012 Todo.txt contributors (http://todotxt.com)

LICENSE:

Todo.txt Touch is free software: you can redistribute it and/or modify it under the terms of the GNU General Public
License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any
later version.

Todo.txt Touch is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied
warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
details.

You should have received a copy of the GNU General Public License along with Todo.txt Touch.  If not, see
<http://www.gnu.org/licenses/>.

@author Todo.txt contributors <todotxt@yahoogroups.com>
@license http://www.gnu.org/licenses/gpl.html
@copyright 2009-2012 Todo.txt contributors (http://todotxt.com)
-->

<!--suppress ALL -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/context_select_all"
        android:title="@string/select_all"
        android:icon="@drawable/ic_select_all_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/context_share"
        android:title="@string/share"
        android:icon="@drawable/ic_share_white_24dp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/context_delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_delete_white_24dp"
        app:showAsAction="always"
        />
</menu>
